--- a/CarRecorder/res/layout/preview.xml
+++ b/CarRecorder/res/layout/preview.xml
@@ -3,14 +3,28 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/white"
-    android:orientation="vertical"
-    android:keepScreenOn="true" >
+    android:keepScreenOn="true"
+    android:orientation="vertical" >
 
-    <SurfaceView
-        android:id="@+id/surfaceView"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1" />
+        android:layout_height="match_parent" >
+
+        <SurfaceView
+            android:id="@+id/surfaceView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+        <TextView
+            android:id="@+id/textview_time"
+            style="@style/RecordingText"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginLeft="8dp"
+            android:layout_marginTop="8dp"
+            android:text="00:00" />
+
+    </RelativeLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
